# VNAV-labs

lab1/: CMakeLists.txt  random_vector.cpp
lab2/two_drones_pkg/: CMakeLists.txt  package.xml
lab2/two_drones_pkg/launch/: two_drones.launch.yaml
lab2/two_drones_pkg/src/: frames_publisher_node.cpp  plots_publisher_node.cpp
lab3/: README.md
lab3/controller_pkg/: CMakeLists.txt
lab3/controller_pkg/config/: params.yaml
lab3/controller_pkg/launch/: lab3_stack.docker.launch.yaml  lab3_stack.gazebo.launch.yaml  lab3_stack.launch.yaml  lab3_stack.utm.launch.yaml  traj_tracking.launch.py
lab3/controller_pkg/src/: controller_node.cpp  traj_publisher.cpp
lab3/gazebo_quadrotor_pkg/: package.xml  setup.cfg  setup.py
lab3/gazebo_quadrotor_pkg/gazebo_quadrotor_pkg/: lab3_keyboard.py  quadrotor_bridge.py  viz_publisher.py
lab3/gazebo_quadrotor_pkg/launch/: gazebo_quadrotor.launch.py
lab3/gazebo_quadrotor_pkg/urdf/: quadrotor.urdf
lab3/gazebo_quadrotor_pkg/worlds/: lab3.world  lab4.world
lab3/tesse_ros_bridge/: setup.py
lab3/tesse_ros_bridge/config/: params.docker.yaml  params.utm.yaml
lab3/tesse_ros_bridge/launch/: tesse_quadrotor_bridge.docker.launch.yaml  tesse_quadrotor_bridge.utm.launch.yaml
lab4/: README.md
lab4/config/: lab4_foxglove.json
lab4/data/StreamingAssets/: vnav-2020-lab4_static_tfs.csv
lab4/planner_pkg/: CMakeLists.txt  package.xml
lab4/planner_pkg/config/: lab4_foxglove.json
lab4/planner_pkg/launch/: lab4_stack.gazebo.launch.py  static_point_test.launch.py  traj_gen.launch.py
lab4/planner_pkg/src/: simple_traj_planner.cpp
lab4/scripts/: generate_lab4_world.py
lab4/trajectory_generation_pkg/: CMakeLists.txt  package.xml
lab4/trajectory_generation_pkg/src/: trajectory_generation_node.cpp
lab5/: CMakeLists.txt
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt  package.xml
lab8/: CMakeLists.txt  package.xml
