<?xml version="1.0"?>
<package format="3">
  <name>lab_7</name>
  <version>0.0.0</version>
  <description>The lab_7 package. Contains software to learn about SLAM.</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gtsam</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
