<?xml version="1.0"?>
<package format="2">
  <name>lab_8</name>
  <version>0.0.0</version>
  <description>The lab_8 package. Contains software to learn about SLAM.</description>

  <maintainer email="fishberg@mit.edu">Andrew Fishberg</maintainer>

  <license>MIT</license>

  <!--
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>darknet_ros</depend>
  <depend>dbow2_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam</depend>
  <depend>image_transport</depend>
  <depend>lab_8</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gtsam</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ultralytics_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
