<?xml version="1.0"?>
<package format="2">
  <name>two_drones_pkg</name>
  <version>0.0.0</version>
  <description>MIT 16.485 VNAV 2019 - Lab 2 package</description>
  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
