<?xml version="1.0"?>
<package format="3">
  <name>trajectory_generation</name>
  <version>0.0.0</version>
  <description>Polynomial trajectory generation for Lab 4</description>
  <maintainer email="sjamieson@whoi.edu">Stewart Jamieson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>mav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libgoogle-glog-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
